fix: updated rendering of button on mobile

--- a/common.css
+++ b/common.css
@@ -2,6 +2,28 @@
 /****************************************/
 /* common styles used for v1 through v4 */
 /****************************************/
+@media only screen and (min-width: 700px) {
+    .hide-on-desktop{
+        display: none !important;
+    }
+  }
+
+  @media only screen and (max-width: 700px) {
+    .hide-on-mobile{
+        display: none !important;
+    }
+  }
+
+#directions {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.empty {
+    visibility: hidden;
+}
+
 
 .key-container {
     display: grid;
@@ -12,29 +34,21 @@
             height: 200px;
 }
 
-#directions {
-    margin-left: auto;
-    margin-right: auto;
-}
+    .key {
+        display: flex;
+                justify-content: center;
+                align-items: center;
+                background: #333;
+                border-radius: 5px;
+                color: #fff;
+                font-family: 'Press Start 2P', cursive;
+    }
 
-.key {
-    display: flex;
-            justify-content: center;
-            align-items: center;
-            background: #333;
-            border-radius: 5px;
-            color: #fff;
-            font-family: 'Press Start 2P', cursive;
-}
-.empty {
-    visibility: hidden;
-}
 
 /* .up, .down {
     writing-mode: tb-rl;
     transform: rotate(-90deg);
 } */
-
 body          { 
     -webkit-touch-callout: none; /* Safari */
         -webkit-user-select: none; /* Chrome */     
@@ -44,7 +58,8 @@ body          {
 #stats        { border: 2px solid black; }
 #controls     { width: 28em; float: left; padding: 1em; font-size: 0.7em; }
 #controls th  { text-align: right; vertical-align: middle; }
-#instructions { clear: left; float: left; width: 17em; padding: 1em; border: 1px solid black; box-shadow: 0 0 5px black; }
+#instructions { clear: left; 
+    margin: 2px auto; width: 17em; padding: 1em; border: 1px solid black; box-shadow: 0 0 5px black; }
 #racer        { position: relative; z-index: 0; width: 800px; height: 600px; margin-left: auto; margin-right: auto; border: 2px solid black; }
 #canvas       { position: absolute; z-index: 0; width: 800px; height: 600px; z-index: 0; background-color: #72D7EE; }
 #mute         { background-position:   0px 0px; width: 32px; height: 32px; background: url(images/mute.png); display: inline-block; cursor: pointer; position: absolute; margin-left: 15em; }
